--- a/main.html
+++ b/main.html
@@ -7,8 +7,63 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
+       <table border="2">
+        <tr>
+            <td >
+                <table border="2">
+                    <tr>
+                        <th colspan="2">Nested Table 2</th>
+                    </tr>
+                    <tr>
+                        <th>Column 1</th>
+                        <th>Column 2</th>
+                    </tr>
+                    <tr>
+                        <td>abc</td>
+                        <td>def</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table border="2">
+                    <tr>
+                        <th colspan="2">Nested Table 1</th>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <ul>
+                                <li>List item 1</li>
+                                <li>List item 2</li>
+                                <li>List item 3</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td >
+                <table border="2">
+					<tr >
+						<th colspan="2">Nested Table 3</th>
+					</tr>
+                    <tr>
+                        <td class="purple-link"><a href="#">Nested Table</a></td>
+                        <td>Demo Continued</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <th colspan="2">Nested Table 4</th>
+                    </tr>
+                    <tr>
+                        <td style="background-color:black; text-align:center; color:white" colspan="2">HTML</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
     </table>
   </body>
 </html>
